Fixed header dimensions on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -65,6 +65,11 @@
 }
 
 @media (max-width: 932px){
+    .header{
+        height: 100vh;
+        width: 100vw;
+    }
+
     .header .social i {
         font-size: 30px;
     }
